kubernetes/queue-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue-worker
  namespace: katze-backend
  labels:
    app: queue-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queue-worker
  template:
    metadata:
      labels:
        app: queue-worker
    spec:
      containers:
        - name: queue-worker
          image: ghcr.io/martinkribs/katze-backend:main
          imagePullPolicy: Always
          workingDir: /var/www/laravel
          command: ["php", "artisan", "queue:work", "--tries=3", "--backoff=3"]
          securityContext:
            runAsUser: 0
            runAsGroup: 0
          resources:
            limits:
              memory: "256Mi"
              cpu: "300m"
            requests:
              memory: "128Mi"
              cpu: "100m"
          volumeMounts:
            - name: app-pvc
              mountPath: /var/www/laravel/storage
      imagePullSecrets:
        - name: docker-secrets
      volumes:
        - name: app-pvc
          persistentVolumeClaim:
            claimName: app-pvc
