kubernetes/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: katze-backend
  labels:
    app: katze-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: katze-backend
  template:
    metadata:
      labels:
        app: katze-backend
    spec:
      containers:
        - name: katze-backend
          image: ghcr.io/martinkribs/katze-backend:latest
          imagePullPolicy: Always
          workingDir: /var/www/laravel
          ports:
            - containerPort: 9000
              name: fpm
          securityContext:
            runAsUser: 0
            runAsGroup: 0
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - name: app-storage
              mountPath: /var/www/laravel/app
              subPath: laravel/app
            - name: app-storage
              mountPath: /var/www/laravel/config
              subPath: laravel/config
            - name: app-storage
              mountPath: /var/www/laravel/database
              subPath: laravel/database
            - name: app-storage
              mountPath: /var/www/laravel/resources
              subPath: laravel/resources
            - name: app-storage
              mountPath: /var/www/laravel/routes
              subPath: laravel/routes
            - name: app-storage
              mountPath: /var/www/laravel/storage
              subPath: laravel/storage
            - name: app-storage
              mountPath: /var/www/laravel/tests
              subPath: laravel/tests
            - name: app-storage
              mountPath: /var/www/laravel/lang
              subPath: laravel/lang
            - name: app-storage
              mountPath: /var/www/laravel/bootstrap
              subPath: laravel/bootstrap
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: katze-backend
  namespace: katze-backend
spec:
  selector:
    app: katze-backend
  ports:
    - protocol: TCP
      name: fpm
      port: 9000
      targetPort: 9000
