kubernetes/download-page-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: download-page
  labels:
    app: download-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: download-page
  template:
    metadata:
      labels:
        app: download-page
    spec:
      containers:
      - name: download-page
        image: ghcr.io/martinkribs/katze-frontend:main
        ports:
        - containerPort: 80
        volumeMounts:
        - name: apk-storage
          mountPath: /usr/share/nginx/html/android
      volumes:
      - name: apk-storage
        persistentVolumeClaim:
          claimName: apk-storage-claim
---
apiVersion: v1
kind: Service
metadata:
  name: download-page-service
spec:
  selector:
    app: download-page
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
