kubernetes/soketi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soketi-server
  namespace: katze-backend
  labels:
    app: soketi-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soketi-server
  template:
    metadata:
      labels:
        app: soketi-server
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: soketi
          image: quay.io/soketi/soketi:1.4-16-debian
          ports:
            - containerPort: 6001
              name: websocket
            - containerPort: 9601
              name: metrics
          resources:
            limits:
              memory: "256Mi"
              cpu: "300m"
            requests:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soketi-worker
  namespace: katze-backend
  labels:
    app: soketi-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soketi-worker
  template:
    metadata:
      labels:
        app: soketi-worker
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: soketi
          image: quay.io/soketi/soketi:1.4-16-debian
          ports:
            - containerPort: 9601
              name: metrics
          resources:
            limits:
              memory: "256Mi"
              cpu: "300m"
            requests:
              memory: "128Mi"
              cpu: "100m"
          readinessProbe:
            httpGet:
              path: /ready
              port: 9601
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 9601
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: soketi
  namespace: katze-backend
spec:
  selector:
    app: soketi-server
  ports:
    - protocol: TCP
      port: 6001
      name: websocket
      targetPort: 6001
    - protocol: TCP
      port: 9601
      name: metrics
      targetPort: 9601
