kubernetes/ssh-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssh-service
  namespace: katze-backend
  labels:
    app: ssh-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ssh-service
  template:
    metadata:
      labels:
        app: ssh-service
    spec:
      containers:
        - name: ssh-service
          image: linuxserver/openssh-server
          ports:
            - containerPort: 2222
          volumeMounts:
            - name: app-storage
              mountPath: /var/www/
            - name: app-storage
              mountPath: /config
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ssh
  namespace: katze-backend
spec:
    selector:
        app: ssh-service
    ports:
        - protocol: TCP
          port: 22
          name: ssh-service
          targetPort: 2222
