kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: katze-backend
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
    traefik.ingress.kubernetes.io/router.middlewares: katze-backend-enable-websocket@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - katze.app
        - soketi.katze.app
        - open.katze.app
        - meet.katze.app
        - xmpp.meet.katze.app
  rules:
    - host: "katze.app"
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: download-page-service
                port:
                  number: 80
    - host: "meet.katze.app"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jitsi-web
                port:
                  number: 80
    - host: "soketi.katze.app"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: soketi
                port:
                  number: 6001
    - host: "open.katze.app"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
    - host: "xmpp.meet.katze.app"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jitsi-prosody
                port:
                  number: 5269
