kubernetes/mailu-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailu
  namespace: katze-backend
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mail.katze.app
        - autoconfig.katze.app
        - autodiscover.katze.app
  rules:
    - host: "mail.katze.app"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailu-front
                port:
                  number: 80
    - host: "autoconfig.katze.app"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailu-front
                port:
                  number: 80
    - host: "autodiscover.katze.app"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailu-front
                port:
                  number: 80
